syntax = "proto3";
package atomone.genutil.v1beta1;

import "gogoproto/gogo.proto";
import "amino/amino.proto";

option go_package = "github.com/atomone-hub/atomone/x/genutil/types";

// GenesisState defines the raw genesis transaction in JSON.
message GenesisState {
  // gen_txs defines the genesis transactions.
  repeated bytes gen_txs = 1 [
    (gogoproto.casttype) = "encoding/json.RawMessage",
    (gogoproto.jsontag) = "gentxs",
    (amino.field_name) = "gentxs",
    (amino.dont_omitempty) = true
  ];
}
